开发者管理功能实现

--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -103,5 +103,6 @@
 		<script src="lib/koala_wizard.js"></script>
 		<script src="lib/validate.js"></script>
 		<script src="js/main.js" ></script>
+		<script src="js/cis/developer.js"></script>
 	</body>
 </html>
