--- a/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
@@ -1,5 +1,5 @@
 <div class="modal fade developer">
-    <div class="modal-dialog">
+    <div class="modal-dialog" >
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -10,47 +10,13 @@
                     <div class="form-group">
                         <label class="col-lg-3 control-label">用户名称:</label>
                         <div class="col-lg-9">
-                            <input type="text" class="form-control" id="userName"><span class="required">*</span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label">用户账号:</label>
-                        <div class="col-lg-9">
-                            <input type="text" class="form-control" id="userAccount"><span class="required">*</span>
+                            <input type="text" class="form-control" id="name"><span class="required">*</span>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label">用户邮箱:</label>
                         <div class="col-lg-9">
                             <input type="text" class="form-control" id="email"><span class="required">*</span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="userPassword" class="col-lg-3 control-label">用户密码:</label>
-                        <div class="col-lg-9">
-                            <input type="password" class="form-control" id="userPassword"><span class="required">*</span>
-                        </div>
-                    </div>
-                     <div class="form-group">
-                       <label class="col-lg-3 control-label">是否启用:</label>
-                            <div class="col-lg-9">
-                                <div class="radio">
-                                    <span class="checked"><input type="radio"
-                                        style="opacity: 0;" checked="checked" name="isEnable" value="true"></span>
-                                </div>
-                                <span style="position: relative; top: 8px;">是</span>
-                                &nbsp;&nbsp;&nbsp;
-                                <div class="radio">
-                                    <span><input type="radio" style="opacity: 0;"
-                                        name="isEnable" value="false"></span>
-                                </div>
-                                <span style="position: relative; top: 8px;">否</span>
-                            </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label">描述:</label>
-                        <div class="col-lg-9">
-                            <input type="text" class="form-control" id="userDescript">
                         </div>
                     </div>
                 </form>
