开发者管理功能

--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -67,9 +67,9 @@
 								<i class="glyphicon glyphicon-user"></i>&nbsp;<span>开发人员管理</span>
 							</a>
 						</li>
-						<li data-href="pages/cis/system-config.html" data-title="系统配置">
+						<li data-href="pages/cis/system-config.html" data-title="工具配置">
 							<a href="#">
-								<i class="glyphicon glyphicon-cog"></i>&nbsp;<span>系统配置</span>
+								<i class="glyphicon glyphicon-cog"></i>&nbsp;<span>工具配置</span>
 							</a>
 						</li>
 					</ul>
