--- a/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
@@ -7,6 +7,12 @@
             </div>
             <div class="modal-body" style="padding-left:45px; padding-right:65px;">
                 <form class="form-horizontal" role="form">
+                	<div class="form-group">
+                        <label class="col-lg-3 control-label">开发者ID:</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="developerId"><span class="required">*</span>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label">用户名称:</label>
                         <div class="col-lg-9">
