--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -67,7 +67,7 @@
 								<i class="glyphicon glyphicon-user"></i>&nbsp;<span>开发人员管理</span>
 							</a>
 						</li>
-						<li data-href="pages/cis/system-config.html" data-title="工具配置">
+						<li data-href="pages/cis/tool-list.html" data-title="工具配置">
 							<a href="#">
 								<i class="glyphicon glyphicon-cog"></i>&nbsp;<span>工具配置</span>
 							</a>
@@ -104,5 +104,6 @@
 		<script src="lib/validate.js"></script>
 		<script src="js/main.js" ></script>
 		<script src="js/cis/developer.js"></script>
+		<script src="js/cis/tool.js"></script>
 	</body>
 </html>
