工具修改功能实现

--- a/openci-platform-web/src/main/webapp/pages/cis/project-add.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-add.html
@@ -145,7 +145,7 @@
 						</div>
 					</div>
 					<label class="col-sm-1 control-label" style="width: 10%;">权限系统</label>
-					<label class="col-sm-1 control-label" style="width: 10%; padding-left: 3%;">缓存类型:</label>
+					<label class="col-sm-1 control-label" style="width: 12%; padding-left: 3%;">缓存类型:</label>
 					<div class="col-sm-5">
 						<div class="btn-group select" id="cacheType"></div>
 						<input type="hidden" id="cacheTypeValue">
@@ -160,7 +160,7 @@
 						</div>
 					</div>
 					<label class="col-sm-1 control-label" style="width: 10%;">监控系统</label>
-					<label class="col-sm-1 control-label" style="width: 10%; padding-left: 3%;">系统类型:</label>
+					<label class="col-sm-1 control-label" style="width: 12%; padding-left: 3%;">系统类型:</label>
 					<div class="col-sm-5">
 						<div class="btn-group select" id="monitorType"></div>
 						<input type="hidden" id="monitorTypeValue">
@@ -290,45 +290,7 @@
 			</div>
 		</div>
 		<div class="page">
-			<div id="projectGrid" style="margin: auto; margin-right: auto;">
-				<div class="table-responsive" style="width:75%; text-align: center">
-					<table class="table table-responsive table-bordered grid">
-						<tbody>
-							<tr>
-								<td>
-								<div class="colResizePointer"></div>
-								<div class="grid-body" style="width: 1100px;">
-									<div class="grid-table-head" style="width: 1100px;">
-										<table class="table table-bordered">
-											<tbody>
-												<tr>
-													<th width="50px;">
-													<div class="checker">
-														<span data-role="selectAll"></span>
-													</div></th><th width="auto" index="0">模块名称
-													<div class="colResize"></div></th>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-									<div class="grid-table-body" style="width: 1100px;">
-										<table class="table table-responsive table-bordered table-hover table-striped">
-											<tbody>
-												<tr>
-													<td width="50px;">
-													<div class="checker">
-														<span indexvalue="0" data-role="indexCheckbox" data-value="1"></span>
-													</div></td><td width="auto" index="0">xxxx</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
+			<div id="developerGrid"></div>
 			<div class="btn_nav" style="margin-top: 2%;">
 				<button data-toggle="prev" class="btn btn-default" >
 					<span class="glyphicon glyphicon-arrow-left"></span>&nbsp;上一步
