创建项目功能

--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -105,5 +105,6 @@
 		<script src="js/main.js" ></script>
 		<script src="js/cis/developer.js"></script>
 		<script src="js/cis/tool.js"></script>
+		<script src="js/cis/module.js"></script>
 	</body>
 </html>
