--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -52,14 +52,14 @@
 						<li class="nav-header">
 							<i class="glyphicon glyphicon-home"></i>&nbsp;菜单
 						</li>
-						<li class="active" data-href="pages/cis/project-list.html" data-title="项目列表">
-							<a href="#" >
-								<i class="glyphicon glyphicon-book"></i>&nbsp;<span>项目列表</span>
-							</a>
-						</li>
 						<li data-href="pages/cis/project-add.html" data-title="创建项目">
 							<a href="#" >
 								<i class="glyphicon glyphicon-edit"></i>&nbsp;<span>创建项目</span>
+							</a>
+						</li>
+						<li data-href="pages/cis/role-list.html" data-title="角色管理">
+							<a href="#">
+								<i class="glyphicon glyphicon-user"></i>&nbsp;<span>角色管理</span>
 							</a>
 						</li>
 						<li data-href="pages/cis/developer-list.html" data-title="开发人员管理">
@@ -106,5 +106,6 @@
 		<script src="js/cis/developer.js"></script>
 		<script src="js/cis/tool.js"></script>
 		<script src="js/cis/module.js"></script>
+		<script src="js/cis/role.js"></script>
 	</body>
 </html>
