--- a/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
@@ -14,15 +14,21 @@
                         </div>
                     </div>
                 	<div class="form-group">
-                        <label class="col-lg-3 control-label">工具类型:</label>
-                        <div class="col-lg-9">
-                           	<div class="btn-group select" id="toolType"></div>
-                        </div>
-                    </div>
-                	<div class="form-group">
                         <label class="col-lg-3 control-label">工具地址:</label>
                         <div class="col-lg-9">
                             <input type="text" class="form-control" id="serviceUrl"><span class="required">*</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">保存路径:</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="savePath"><span class="required">*</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">Token:</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="token"><span class="required">*</span>
                         </div>
                     </div>
                     <div class="form-group">
