工具配置测试连接

--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -52,7 +52,7 @@
 						<li class="nav-header">
 							<i class="glyphicon glyphicon-home"></i>&nbsp;菜单
 						</li>
-						<li data-href="pages/cis/project-add.html" data-title="创建项目">
+						<li data-href="pages/cis/project-add.html" data-title="创建项目" class="active">
 							<a href="#" >
 								<i class="glyphicon glyphicon-edit"></i>&nbsp;<span>创建项目</span>
 							</a>
