--- a/openci-platform-web/src/main/webapp/pages/cis/project-add.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-add.html
@@ -164,6 +164,12 @@
 				</div>
 		</div>
 		<div class="page  select-tools">
+			<div class="row" style="margin-left: 1.6%; margin-bottom: 6px;">
+				<div class="checker isUseCas">
+					<span id="isUseCas"></span>
+				</div>
+				<label class="control-label" >是否整合CAS</label>
+			</div>
 			<div id="toolsGrid"></div>
 			<div class="btn_nav" style="margin-top: 1%;">
 				<button data-toggle="prev" class="btn btn-default" >
