--- a/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
@@ -91,7 +91,7 @@
 				name : 'usable',
 				width : 'auto',
 				render : function(item, name, index) {
-					return '<a><span class="glyphicon glyphicon-transfer"></span>&nbsp;测试连接</a>';
+					return '<a onclick="toolManager.testConnection('+item.id+', '+index+')"><span class="glyphicon glyphicon-transfer"></span>&nbsp;测试连接</a>';
 				}
 			}];
 			var url = 'tracconfiguration/pagingquery';
