创建项目功能

--- a/openci-platform-web/src/main/webapp/pages/cis/project-add.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-add.html
@@ -143,7 +143,7 @@
 					<label class="col-sm-8 control-label">日志系统</label>
 				</div>
 			</form>
-				<div class="btn_nav" style="margin-top: 10%;">
+				<div class="btn_nav" style="margin-top: 12%;">
 					<button data-toggle="prev" class="btn btn-default" >
 						<span class="glyphicon glyphicon-arrow-left"></span>&nbsp;上一步
 					</button>
@@ -164,18 +164,12 @@
 				</div>
 		</div>
 		<div class="page  select-tools">
-			<div class="row" style="margin-left: 1.6%; margin-bottom: 6px;">
-				<div class="checker isUseCas">
-					<span id="isUseCas"></span>
-				</div>
-				<label class="control-label" >是否整合CAS</label>
-			</div>
 			<div id="toolsGrid"></div>
 			<div class="btn_nav" style="margin-top: 1%;">
 				<button data-toggle="prev" class="btn btn-default" >
 					<span class="glyphicon glyphicon-arrow-left"></span>&nbsp;上一步
 				</button>
-				<button data-toggle="complate" class="btn btn-success" >
+				<button data-toggle="complate" class="btn btn-success" id="complateBtn">
 					<span class="glyphicon glyphicon-ok"></span>&nbsp;完成
 				</button>
 			</div>
