--- a/openci-platform-web/src/main/webapp/pages/cis/jenkins-config.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/jenkins-config.html
@@ -10,13 +10,25 @@
                 	<div class="form-group">
                         <label class="col-lg-3 control-label">工具选择:</label>
                         <div class="col-lg-9">
-                           	<div class="btn-group select" id="selectTool"></div><span class="required">*</span>
+                           	<div class="btn-group select" id="scmType"></div><span class="required">*</span>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label">地址:</label>
                         <div class="col-lg-9">
-                            <input type="text" class="form-control" id="serviceUrl"><span class="required">*</span>
+                            <input type="text" class="form-control" id="repositoryUrl"><span class="required">*</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">用户名:</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="username"><span class="required">*</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">密码:</label>
+                        <div class="col-lg-9">
+                            <input type="password" class="form-control" id="password"><span class="required">*</span>
                         </div>
                     </div>
                 </form>
