添加子系统参数

--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -75,7 +75,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-xs-10">
+			<div class="col-xs-10 content">
 				<ol class="breadcrumb">
 					<li>
 						<a href="#">
