--- a/openci-platform-web/src/main/webapp/pages/cis/project-add.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-add.html
@@ -106,7 +106,7 @@
 						</div>
 					</div>
 					<label class="col-sm-1 control-label" style="width: 10%;">监控系统</label>
-					<label class="col-sm-1 control-label" style="width: 12%; padding-left: 3%;">系统类型:</label>
+					<label class="col-sm-1 control-label" style="width: 12%; padding-left: 3%;">安装方式:</label>
 					<div class="col-sm-5">
 						<div class="btn-group select" id="monitorType"></div>
 						<input type="hidden" id="monitorTypeValue">
