去掉多余文件

--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -6,8 +6,6 @@
 		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/koala.css" />
 		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css"/>
-		<link rel="stylesheet" href="css/koala_wizard.css"/>
 		<style>
 			html {
 				font-size: 14px;
@@ -17,7 +15,7 @@
 	<body>
 		<div class="g-header">
 			<nav class="navbar navbar-default">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="http://openkoala.org/display/koala/Home" target="_">
 					<img src="images/global.logo.png"/>
 					OPENCIS WEB平台
 				</a>
@@ -96,8 +94,6 @@
 		</div>
 		<script src="lib/jquery-1.8.3.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.js"></script>
-		<script src="lib/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js"></script>
-		<script src="lib/bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
 		<script src="lib/respond.min.js"></script>
 		<script src="lib/koala-ui.plugin.js"></script>
 		<script src="lib/koala_wizard.js"></script>
