--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -50,6 +50,11 @@
 						<li class="nav-header">
 							<i class="glyphicon glyphicon-home"></i>&nbsp;菜单
 						</li>
+						<li data-href="pages/cis/project-list.html" data-title="项目列表">
+							<a href="#" >
+								<i class="glyphicon glyphicon-list"></i>&nbsp;<span>项目列表</span>
+							</a>
+						</li>
 						<li data-href="pages/cis/project-add.html" data-title="创建项目" class="active">
 							<a href="#" >
 								<i class="glyphicon glyphicon-edit"></i>&nbsp;<span>创建项目</span>
