--- a/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
@@ -223,12 +223,12 @@
 					data.password = password.val();
 					$.post(url, data).done(function(data) {
 						if (data.result) {
-							casConfig.message({
+							$('.content').message({
 								type : 'success',
 								content : '保存成功'
 							});
 						} else {
-							casConfig.message({
+							$('.content').message({
 								type : 'error',
 								content : data.actionError
 							});
