--- a/openci-platform-web/src/main/webapp/pages/cis/project-add.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-add.html
@@ -32,7 +32,7 @@
 			<form class="form-horizontal">
 				<div class="form-group">
 					<label for="projectName" class="col-lg-4 control-label">项目名称:</label>
-					<input type="text" class="col-lg-8 form-control" id="projectName" name="projectName"  dataType="English" placeholder="输入项目名称" require/>
+					<input type="text" class="col-lg-8 form-control" id="projectName" name="projectName"  dataType="UNChinese" placeholder="输入项目名称" require/>
 					<span class="required">*</span>
 				</div>
 				<div class="form-group">
