--- a/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
@@ -26,6 +26,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-lg-3 control-label">请求根路径:</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="requestRootAddress"><span class="required">*</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-lg-3 control-label">用户名:</label>
                         <div class="col-lg-9">
                             <input type="text" class="form-control" id="username"><span class="required">*</span>
