开发者管理添加密码

--- a/openci-platform-web/src/main/webapp/pages/cis/developer-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/developer-list.html
@@ -13,6 +13,11 @@
 				width : 150
 			},
 			{
+				title : '用户密码',
+				name : 'password',
+				width : 150
+			},
+			{
 				title : '邮箱',
 				name : 'email',
 				width : 'auto'
