--- a/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
@@ -20,6 +20,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-lg-3 control-label">用户密码:</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="password"><span class="required">*</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-lg-3 control-label">用户邮箱:</label>
                         <div class="col-lg-9">
                             <input type="text" class="form-control" id="email"><span class="required">*</span>
