添加项目列表功能 项目名称添加验证

--- a/openci-platform-web/src/main/webapp/pages/cis/project-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-list.html
@@ -1,291 +1,85 @@
-<div class="u-project-list">
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<span class="glyphicon glyphicon-th title"></span>&nbsp;项目名称
-			<div class="project-management-btn">
-				<span class="glyphicon glyphicon-cog" data-role="editBtn"></span>
-				<span class="glyphicon glyphicon-remove" data-role="removeBtn"></span>
-			</div>
-		</div>
-		<div class="panel-body">
-			<form class="form-horizontal">
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<span class="glyphicon glyphicon-th title"></span>&nbsp;项目名称
-			<div class="project-management-btn">
-				<span class="glyphicon glyphicon-cog" data-role="editBtn"></span>
-				<span class="glyphicon glyphicon-remove" data-role="removeBtn"></span>
-			</div>
-		</div>
-		<div class="panel-body">
-			<form class="form-horizontal">
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<span class="glyphicon glyphicon-th title"></span>&nbsp;项目名称
-			<div class="project-management-btn">
-				<span class="glyphicon glyphicon-cog" data-role="editBtn"></span>
-				<span class="glyphicon glyphicon-remove" data-role="removeBtn"></span>
-			</div>
-		</div>
-		<div class="panel-body">
-			<form class="form-horizontal">
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<span class="glyphicon glyphicon-th title"></span>&nbsp;项目名称
-			<div class="project-management-btn">
-				<span class="glyphicon glyphicon-cog" data-role="editBtn"></span>
-				<span class="glyphicon glyphicon-remove" data-role="removeBtn"></span>
-			</div>
-		</div>
-		<div class="panel-body">
-			<form class="form-horizontal">
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-					<label class="col-sm-3 control-label">项目名称:</label>
-					<div class="col-sm-3">
-						<p class="form-control-static">
-							xxxxxxx
-						</p>
-					</div>
-				</div>
-			</form>
-		</div>
-	</div>
-	
-</div>
+<div id="projectGrid"></div>
 <script>
 	$(function(){
-		$.get('project/get-all-projects').done(function(data){
-			console.info(data)
+			var columns = [
+			{
+				title : '项目名称',
+				name : 'name',
+				width : 150
+			},
+			{
+				title : 'GroupID',
+				name : 'groupId',
+				width : 120,
+				render: function(item, name, index){
+					return item.projectDetail[name];
+				}
+			},
+			{
+				title : 'AritifactID',
+				name : 'artifactId',
+				width : 120,
+				render: function(item, name, index){
+					return item.projectDetail[name];
+				}
+			},
+			{
+				title : '项目路径',
+				name : 'projectSavePath',
+				width : 300,
+				render: function(item, name, index){
+					return item.projectDetail[name];
+				}
+			},
+			{
+				title : '创建时间',
+				name : 'createDate',
+				width : 150
+			},
+			{
+				title : '操作',
+				name : 'projectSavePath',
+				width : 120,
+				render : function(item, name, index) {
+					return '<a onclick="showProjectDetail(' + item.id + ')"><span class="glyphicon glyphicon-search"></span>&nbsp;详细</a>';
+				}
+			}
+		];
+		$('#projectGrid').grid({
+			identity : 'id',
+			columns : columns,
+			querys: [{title: '项目名称', value: 'name'}],
+			url : 'project/pagingquery'
 		});
-		$('[data-role="removeBtn"]').on('click', function(){
-			$(this).closest('.panel').fadeOut(600, function(){
-				$(this).remove();
-			})
+	});
+	
+	var showProjectDetail = function(id){
+		$.get('project/detail/'+id).done(function(project){
+			$.get('pages/cis/project-detail.html').done(function(data){
+				var dialog = $(data);
+				dialog.find('#name').html(project.name);
+				dialog.find('#groupId').html(project.projectDetail.groupId);
+				dialog.find('#artifactId').html(project.projectDetail.artifactId);
+				dialog.find('#projectSavePath').html(project.projectDetail.projectSavePath);
+				dialog.find('#createDate').html(project.createDate);
+				var devlopers = [];
+				$.each(project.developers, function(){
+					devlopers.push(this.developer.name);
+				});
+				dialog.find('#devlopers').html(devlopers.join(','));
+				var tools = [];
+				$.each(project.tools, function(){
+					tools.push(this.toolConfiguration.name);
+				});
+				dialog.find('#tools').html(tools.join(','));
+				dialog.modal({
+					keyboard: false
+				}).on({
+					'hidden.bs.modal': function(){
+						$(this).remove();
+					}
+				});
+			});
 		});
-	})
+	}
 </script>
