--- a/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/developer-template.html
@@ -22,7 +22,7 @@
                     <div class="form-group">
                         <label class="col-lg-3 control-label">用户密码:</label>
                         <div class="col-lg-9">
-                            <input type="text" class="form-control" id="password"><span class="required">*</span>
+                            <input type="password" class="form-control" id="password"><span class="required">*</span>
                         </div>
                     </div>
                     <div class="form-group">
