--- a/openci-platform-web/src/main/webapp/pages/cis/project-add.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-add.html
@@ -75,7 +75,7 @@
 				<button data-toggle="prev" class="btn btn-default" >
 					<span class="glyphicon glyphicon-arrow-left"></span>&nbsp;上一步
 				</button>
-				<button data-toggle="next" class="btn btn-default" >
+				<button data-toggle="next" class="btn btn-default" data-action="step2">
 					下一步&nbsp;<span class="glyphicon glyphicon-arrow-right"></span>
 				</button>
 			</div>
