修改默认页

--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 					OPENCIS WEB平台
 				</a>
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
-					<div class="btn-group navbar-right" style="display: none;">
+					<div class="btn-group navbar-right">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 							<i class="glyphicon glyphicon-user"></i>
 							<span>&nbsp;
