--- a/openci-platform-web/src/main/webapp/index.html
+++ b/openci-platform-web/src/main/webapp/index.html
@@ -50,7 +50,7 @@
 						<li class="nav-header">
 							<i class="glyphicon glyphicon-home"></i>&nbsp;菜单
 						</li>
-						<li data-href="pages/cis/project-list.html" data-title="项目列表" class="active">
+						<li data-href="pages/cis/project-list.html" data-title="项目列表" class="active" id="projectList">
 							<a href="#" >
 								<i class="glyphicon glyphicon-list"></i>&nbsp;<span>项目列表</span>
 							</a>
