--- a/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-list.html
@@ -118,6 +118,11 @@
 							name : 'token',
 							width : '180px'
 						});
+						columns.splice(3, 0, {
+							title : '邮箱',
+							name : 'email',
+							width : '180px'
+						});
 						url = 'gitconfiguration/pagingquery';
 						break;
 					case 'SVN':
