--- a/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/tool-template.html
@@ -37,6 +37,12 @@
                             <input type="text" class="form-control" id="username"><span class="required">*</span>
                         </div>
                     </div>
+                     <div class="form-group">
+                        <label class="col-lg-3 control-label">邮箱:</label>
+                        <div class="col-lg-9">
+                            <input type="text" class="form-control" id="email"><span class="required">*</span>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-lg-3 control-label">密码:</label>
                         <div class="col-lg-9">
