--- a/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
@@ -32,7 +32,7 @@
 					<div class="form-group">
 						<label class="col-sm-2 control-label">项目路径:</label>
 						<div class="col-sm-2">
-							<p class="form-control-static" id="projectSavePath">
+							<p class="form-control-static" id="projectSavePath" style="word-wrap: break-word;">
 								
 							</p>
 						</div>
